Fix hero content alignment in IE11

--- a/src/app.css
+++ b/src/app.css
@@ -345,6 +345,7 @@ b, strong {
   }
 
   .hero-content {
+    height: 492px;
     padding-bottom: 0;
     padding-top: 0;
   }
